[gd_scene load_steps=7 format=3 uid="uid://bh4r6jyc0nxvf"]

[ext_resource type="Theme" uid="uid://ctskjtcxq00rk" path="res://scenes/ui/game_ui_theme.tres" id="1_fjvl8"]
[ext_resource type="Script" path="res://scenes/ui/inventory_slot.gd" id="1_gdli0"]
[ext_resource type="Texture2D" uid="uid://dlu35oajicjdm" path="res://art/objects/items-spritesheet.png" id="2_p2mbd"]
[ext_resource type="FontVariation" uid="uid://blma3wae5gkky" path="res://art/ui/fonts/zx_palm_variation.tres" id="3_qpl47"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v2wvc"]
atlas = ExtResource("2_p2mbd")
region = Rect2(32, 96, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhkcy"]

[node name="InventorySlot" type="PanelContainer"]
y_sort_enabled = true
offset_right = 36.0
offset_bottom = 36.0
theme = ExtResource("1_fjvl8")
theme_type_variation = &"InventorySlotControl"
script = ExtResource("1_gdli0")

[node name="MarginContainer" type="MarginContainer" parent="."]
y_sort_enabled = true
layout_mode = 2
theme_type_variation = &"MarginContainer"

[node name="ItemContainer" type="PanelContainer" parent="MarginContainer"]
y_sort_enabled = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/ItemContainer"]
y_sort_enabled = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_v2wvc")
expand_mode = 1

[node name="CountContainer" type="PanelContainer" parent="."]
z_index = 1
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"InventoryItemCount"

[node name="MarginContainer2" type="MarginContainer" parent="CountContainer"]
layout_mode = 2
theme_override_constants/margin_left = -3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="ItemQuantity" type="Label" parent="CountContainer/MarginContainer2"]
y_sort_enabled = true
layout_mode = 2
theme_type_variation = &"ItemIconCount"
text = "99"

[node name="ItemButton" type="Button" parent="."]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bhkcy")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_fonts/font = ExtResource("3_qpl47")
theme_override_font_sizes/font_size = 24
text = "Name
"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_fonts/font = ExtResource("3_qpl47")
theme_override_font_sizes/font_size = 24
text = "Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -32.0
offset_right = 134.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_fonts/font = ExtResource("3_qpl47")
theme_override_font_sizes/font_size = 24
text = "Effect
"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_qpl47")
theme_override_font_sizes/font_size = 24
text = "Use
"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_qpl47")
theme_override_font_sizes/font_size = 24
text = "Drop
"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
